Fix background image not covering page

--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,6 @@
     margin: 1rem;
 }
 
-#construction {
-    display: block;
-    width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 90px;
-}
 
 #spacer {
     width: 128px;
@@ -53,14 +46,14 @@
 
 html {
     height: 100%;
+    background-image: url();
 }
 
 body {
+    background-image: url('../images/norway.jpg');
     display: flex;
     flex-direction: column;
-    background: linear-gradient(45deg, #9b2c9b, #5c2870, rgb(40, 36, 65), rgb(51 46 46));
     background-color: #363636;
-    background-image: url('../images/norway.jpg');
     background-blend-mode: multiply;
     background-repeat: no-repeat;
     background-size: cover;
